add hotwatch for file watching

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-druid = { git="https://github.com/xi-editor/druid/" }
+druid = { git="https://github.com/futurepaul/druid/", branch="paintbrush" }
 serde = { version = "1.0", features = ["derive"] }
 ron = "0.5"
+hotwatch = "0.4.3"
